<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stories App</string>
    <string name="exit">Exit</string>
    <string name="do_you_want_to_exit">Do You Want To Exit</string>
    <string name="ok" >yes</string>
    <string name="no" >No</string>
    <string name="the_story_of_a_duck">The story of a duck</string>
    <string name="the_story_of_a_lion">The story of a lion</string>
    <string name="the_story_of_a_cat">The story of a cat</string>
    <string name="the_story_of_a_dog">The story of a dog</string>
    <string name="the_story_of_a_giraffe">The story of a giraffe</string>
    <string name="the_story_of_an_elephant">The story of an elephant</string>
    <string name="the_story_of_a_horse">The story of a horse</string>
    <string name="the_story_of_a_monkey">The story of a monkey</string>
    <string name="the_story_of_a_rabbit">The story of a rabbit</string>
    <string name="the_story_of_a_penguin">The story of a penguin</string>
    <string name="stories">Stories</string>
    <string name="change_language">Change Language</string>
    <string name="settings">Settings</string>
    <string name="small_text">Small Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="large_text">Large Text</string>
    <string name="ar">العربية</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="deutsch">Deutsch</string>
    <string name="fran_ais">Français</string>
    <string name="setting">Settings</string>
    <string name="font_size">Font Size</string>
    <string name="this_is_a_sample_text_preview">This is a sample text preview.</string>
    <string name="select_size">Select size:</string>
    <string name="the_story_of_a_tiger">the story of a tiger</string>
    <string name="the_story_of_a_turtle">the story of a turtle</string>
    <string name="the_story_of_a_bear">the story of a bear</string>
    <string name="the_story_of_a_dear">the story of a dear</string>
    <string name="the_story_of_a_owl">the story of a owl</string>
    <string name="the_story_of_a_sloth">the story of a sloth</string>
    <string name="the_story_of_a_fox">the story of a fox</string>
    <string name="the_story_of_a_wolf">the story of a wolf</string>
    <string name="the_story_of_a_ant">the story of a ant</string>
    <string name="the_story_of_a_bee">the story of a bee</string>
    <string name="play">Play</string>
    <string name="party">PARTY</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="language_not_supported">Language not supported</string>
    <string name="story_not_found">Story not found</string>
    <string name="speech_error_occurred">Speech error occurred</string>
    <string name="welcome_kids">"Welcome Kids "</string>
    <string name="welcome_the_party_d">Welcome The Party :D</string>
    <string name="small_selected">Small selected</string>
    <string name="medium_selected">Medium selected</string>
    <string name="large_selected">Large selected</string>
</resources>