<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/main"
    android:background="#B17CD0"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PageActivity">
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/party"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_margin="30dp"
        android:shadowDx="5"
        android:shadowColor="#C71CE4"
        android:shadowDy="3"
        android:shadowRadius="4"
        android:gravity="center"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A387DB"
            app:cornerRadius="15dp"
            app:icon="@android:drawable/ic_media_play"
            android:text="@string/play"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#000"
            app:iconGravity="textTop"
            app:iconSize="30sp"
            android:layout_marginHorizontal="12dp"
            app:iconTint="#C81313"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/pause_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A387DB"
            app:cornerRadius="15dp"
            app:icon="@android:drawable/ic_media_pause"
            android:text="@string/pause"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#000"
            app:iconGravity="textTop"
            app:iconSize="30sp"
            android:layout_marginHorizontal="12dp"
            app:iconTint="#C81313"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/stop_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#A387DB"
            app:cornerRadius="15dp"
            app:icon="@android:drawable/ic_notification_clear_all"
            android:text="@string/stop"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#000"
            app:iconGravity="textTop"
            android:layout_marginHorizontal="12dp"
            app:iconSize="30sp"
            app:iconTint="#C81313"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>